fix alignment of header w body

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -269,12 +269,10 @@ header.masthead {
 }
 
 header.masthead .header-content {
-  max-width: 500px;
+  max-width: 460px;
   margin-bottom: 100px;
   text-align: left;
   margin: auto;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 header.masthead .header-content h1 {
@@ -293,7 +291,7 @@ header.masthead .device-container .screen img {
 
 @media (min-width: 992px) {
   header.masthead {
-    height: 80vh;
+    height: 85vh;
     min-height: 400px;
     margin-left: 15px;
     padding-top: 0;
@@ -434,7 +432,12 @@ section.cta .cta-content h2 {
 
 #navbar_container {
   display: flex;
-  flex-grow: .7;
+  width: 100%;
+  margin: auto;
+}
+
+.header_title_container {
+  width: 460px;
   margin: auto;
 }
 
@@ -455,6 +458,15 @@ section.cta .overlay {
 
 .info_boxes {
   margin: auto;
+  padding: 0px;
+}
+
+.no_padding {
+  padding: 0px;
+}
+
+.no_margin {
+  margin: 0px;
 }
 
 
